# InheritanceIsEvil

code/: CMakeLists.txt
code/include/: bad_doc.h  best_doc.h  better_doc.h  doc.h  good_doc.h  template_doc.h
code/lib/: CMakeLists.txt  bad_doc.cpp  best_doc.hpp  better_doc.cpp  doc.cpp  good_doc.cpp  template_doc.hpp
